=======
CHANGES
=======


1.3.5 (2009-04-15)
------------------

- Added 'formErrorMessage' to base class

- Do not use z3c.autoinclude


1.3.4 (2009-04-03)
------------------

- Added changed attributes descriptions to ObjectModifiedEvent for subform


1.3.3 (2009-03-11)
------------------

- Added a patched sequence converters that don't raise a LookupError
  when dealing with values that are removed from the terms. This
  is fixed in z3c.form's 2.0.0, so it's only needed when using z3c.form
  1.9.x and below. Include the ``converter.zcml`` file with the
  ``includeOverrides`` directive, if you need it.

- Added applyChanges method to subform

- Do not insert <form> html tag if form wrapped with other <form>


1.3.2 (2009-01-22)
------------------

- Added missing security declarations


1.3.1 (2008-12-25)
------------------

- Fixed subform initialization

- Fixed IPagelet contract implementation


1.3.0 (2008-12-22)
------------------

- Added subforms based on new z3ext.layout pagelet api

- Fixed 'formError' status message

- Use button.handler instead of buttonAndHandler

- Use new pagelet api for rendering widgets


1.2.8 (2008-11-21)
------------------

- Fixed 'formError' status message


1.2.7 (2008-11-20)
------------------

- Use new z3ext.statusmessage api


1.2.6 (2008-11-06)
------------------

- Use updated pagelet api for nameless pagelets


1.2.5 (2008-10-22)
------------------

- Update translations


1.2.4 (2008-10-20)
------------------

- Added support of display form

- Added tranlsations: nl, ru


1.2.3 (2008-10-14)
------------------

- Groups support restored

- Use IPageletType for views


1.2.2 (2008-10-08)
------------------

- Added extra views for form


1.2.1 (2008-10-08)
------------------

- Show all form errors


1.2.0 (2008-10-06)
------------------

- Added default css styles

- Removed z3c packages dependencies

- Use pagelets instead of macros


1.1.2 (2008-09-26)
------------------

- Added group support
