@@ -3,6 +3,9 @@ CHANGES
 =======
 
 
+- Convert 'forms','groups','subforms','views' to tuple
+
+
 1.3.5 (2009-04-15)
 ------------------
 
